# dataplat

./: .gitignore  CLAUDE.md  HARNESS-BOOTSTRAP.md  INVESTIGATION_F022.md  INVESTIGATION_F022_ARCHITECTURE.md  INVESTIGATION_F022_QUICK_REFERENCE.md  INVESTIGATION_F022_REPORT.md  INVESTIGATION_INDEX.md  Makefile  README.md  claude-progress.txt  package.json  pnpm-lock.yaml
.claude/agents/: explorer.md  implementer.md  planner.md  plugin-implementer.md  reviewer.md  verifier.md
.claude/commands/: init-spec.md  plan.md  session-start.md  ship-plugin.md  start-sprint.md
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_baseline_schema.py  0002_users_add_hashed_password.py
apps/api/dataplat_api/: cli.py  config.py  main.py
apps/api/dataplat_api/auth/: __init__.py  dependencies.py
apps/api/dataplat_api/dagster/: __init__.py  dependencies.py  gateway.py
apps/api/dataplat_api/db/: __init__.py  models.py  session.py
apps/api/dataplat_api/llm/: __init__.py  gateway.py  router.py
apps/api/dataplat_api/realtime/: broker.py  notification_broker.py
apps/api/dataplat_api/recipes/: __init__.py  preview.py
apps/api/dataplat_api/routers/: admin.py  auth.py  chunks.py  dagster_events.py  datasets.py  documents.py  health.py  operators.py  recipes.py  runs.py  sources.py  ws_notifications.py  ws_runs.py
apps/api/dataplat_api/schemas/: __init__.py  admin.py  auth.py  chunks.py  collections.py  dagster_events.py  datasets.py  documents.py  operators.py  realtime.py  recipes.py  runs.py  sources.py
apps/api/dataplat_api/storage/: lance.py  s3.py
apps/api/tests/: conftest.py  test_admin_dagster_status.py  test_auth.py  test_chunks_aggregate.py  test_chunks_distribution.py  test_chunks_get_by_id.py  test_chunks_lineage.py  test_chunks_query.py  test_dagster_events.py  test_dagster_notify.py  test_datasets_download.py  test_datasets_get.py  test_datasets_list.py  test_datasets_materialize.py  test_documents_list.py  test_documents_render.py  test_documents_set_canonical.py  test_gateway_chunks_backfill.py  test_gateway_dataset_backfill.py  test_lance_storage.py  test_llm_gateway.py  test_llm_gateway_invariant.py  test_recipes_create.py  test_recipes_get.py  test_recipes_list.py  test_recipes_preview.py  test_recipes_update.py  test_runs_get.py  test_runs_hello_world.py  test_runs_list.py  test_runs_trigger.py  test_sources_collections_create.py  test_sources_collections_list.py  test_sources_get_detail.py  test_sources_list_by_collection.py  test_sources_upload.py  test_ws_notifications.py  test_ws_runs.py
apps/web/: index.html  package.json
contracts/: README.md
contracts/S001-F-001/: feedback.md  proposed.md  review-final.md
contracts/S002-F-002/: feedback.md  proposed.md  review-final.md
contracts/S003-F-003/: agreed.md  feedback.md  review-final.md
contracts/S004-F-004/: feedback.md  proposed.md  review-final.md
contracts/S005-F-005/: agreed.md  feedback.md  proposed.md  review-final.md
contracts/S006-F-006/: agreed.md  feedback.md  review-final.md  verifier-result.md
contracts/S007-F-007/: agreed.md  feedback.md  review-final.md
contracts/S008-F-008/: agreed.md  feedback.md  review-final.md
contracts/S009-F-009/: feedback.md  proposed.md
contracts/S010-F-010/: agreed.md  feedback.md  proposed.md  review-final.md
contracts/S011-F-011/: feedback.md  proposed.md  review-final.md
contracts/S012-F-012/: proposed.md  review-final.md
contracts/S013-F-013/: agreed.md  proposed.md
contracts/S014-F-014/: agreed.md  review-final.md
contracts/S015-F-015/: agreed.md  feedback.md  review-final.md
contracts/S016-F-016/: feedback.md  proposed.md  review-final.md
contracts/S017-F-017/: agreed.md  feedback.md  review-final.md
contracts/S018-F-018/: feedback.md  proposed.md  (+1 more)
dagster/: .gitignore  dagster.yaml  workspace.yaml
docker/: .env.example  docker-compose.dev.yml
docs/: data_platform_design.md
memory/: MEMORY.md  feedback_verifier_role_scope.md  project_bucket_naming.md
spec/: README.md  feature_list.json  product-spec.md  tech-direction.md
verify/: checks.sh  probe_partial_merge.py  reviewer-calibration.md
(+187 files in other folders)
