[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataplat-api"
version = "0.1.0"
description = "Dataplat FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    # Pinned per contracts/S001-F-001/agreed.md §8a
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    # Async DB — pinned per S001-F-001/agreed.md §8a
    "sqlalchemy[asyncio]==2.0.41",
    "asyncpg==0.30.0",
    # Added S002-F-002: Alembic migrations + settings management
    "alembic==1.14.1",
    "pydantic-settings==2.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["dataplat_api"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.14",
]
