[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataplat-api"
version = "0.1.0"
description = "Dataplat FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    # Pinned per contracts/S001-F-001/agreed.md §8a
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    # Async DB — pinned per S001-F-001/agreed.md §8a
    "sqlalchemy[asyncio]==2.0.41",
    "asyncpg==0.30.0",
    # Added S002-F-002: Alembic migrations + settings management
    "alembic==1.14.1",
    "pydantic-settings==2.7.0",
    # Added S003-F-003: async S3 client (aioboto3 pulls in boto3 as transitive dep)
    # boto3 used for sync verification in checks.sh; aioboto3 used for async
    # production uploads starting F-011.
    "aioboto3==15.5.0",
    # Added S004-F-004: async HTTP client for DagsterGateway
    # Not a transitive dep of FastAPI — must be explicit.
    "httpx==0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["dataplat_api"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.14",
    # Added S004-F-004: async test tooling for route tests
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    # httpx is already in [project.dependencies]; re-listed here for clarity
    # as the FastAPI TestClient / ASGITransport use it for test requests.
]
